apps/base/atuin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
  labels:
    app: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      containers:
        - name: atuin
          # image is set via overlay patch
          imagePullPolicy: Always
          args: ["server", "start"]
          ports:
            - name: http
              containerPort: 8888
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
