apps/base/atuin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
spec:
  selector:
    app: atuin
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
