apps/base/atuin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
  labels:
    app: atuin
spec:
  selector:
    app: atuin
  ports:
    - name: atuin
      port: 80
      targetPort: 8888
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: atuin
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
