apps/base/atuin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin-https-route
  namespace: atuin
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - atuin.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: atuin-svc
          port: 8888
